--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "gh-pages": "^6.3.0",
     "vite": "^5.0.0"
   },
-  "homepage": "https://prakash7299.github.io/frontend-gainonwheels"
+  "homepage": "https://prakash7299.github.io/testing-website"
 }
